name:                linenoise
version:             0.1
synopsis:            Interactive prompts with linenoise.
homepage:            https://github.com/sdiehl/haskell-linenoise
license:             BSD3
license-file:        LICENSE
author:              Stephen Diehl
maintainer:          stephen.m.diehl@gmail.com
copyright:           2014 Stephen Diehl
category:            User Interfaces
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.6.1, GHC == 7.6.3, GHC == 7.8.3
extra-source-files:  
  cbits/linenoise.h
Bug-Reports:         https://github.com/sdiehl/haskell-linenoise/issues

Description:
  Interactive prompts with linenoise.
Source-Repository head
    Type: git
    Location: git@github.com:sdiehl/haskell-linenoise.git

library
  exposed-modules:     System.Console.Repl
  other-extensions:
    ForeignFunctionInterface

  ghc-options:        -Wall -fwarn-tabs
  cc-options:         
  build-depends:      
    base        >= 4.6 && <4.7,
    mtl         >= 2.2 && <3.0,
    exceptions  >= 0.6 && <0.7
  default-language:   Haskell2010
  hs-source-dirs:     src
  Include-dirs:       cbits

  C-sources:
    cbits/linenoise.c
